--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.borderCard {
+  padding: 0.05rem;
+  border: 0.2rem solid rgba(0, 65, 102, 0.2);
+  border-radius: 0.5rem;
+  margin: 0.2rem;
+}
