Убрать из layout логику кликов

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
@@ -4,7 +4,8 @@
 }
 
 .selectableLayerLayoutElement {
-  display: inline-flex;
+  flex: inherit;
+  flex-direction: inherit;
 }
 
 .selectedElement {
