Добавить новые настройки

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/FormBlock/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/FormBlock/styles.module.css
@@ -7,3 +7,9 @@
   flex-direction: column;
   overflow-y: auto;
 }
+
+.formBlockContent {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
