--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/DroppableLayer/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/DroppableLayer/styles.module.css
@@ -1,6 +1,6 @@
 .droppableContainer {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: inherit;
+  all: inherit;
+  border: 0;
+  padding: 0;
+  margin: 0;
 }
