--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
@@ -4,8 +4,10 @@
 }
 
 .selectableLayerLayoutElement {
-  flex: inherit;
-  flex-direction: inherit;
+  all: inherit;
+  border: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .selectedElement {
