--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -5,9 +5,23 @@
 
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
 }
 
 .settingsContainer {
   padding: 0.5rem !important;
+}
+
+.elementSettings {
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.buttonsSaveLoad {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
