--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ConponentsStructure/BaseComponents/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ConponentsStructure/BaseComponents/styles.module.css
@@ -1,9 +1,20 @@
-.baseComponents {
+.baseComponentsPanel {
   flex-grow: 0.5;
   flex-shrink: 1;
   flex-basis: 0;
+  display: flex;
+  flex-direction: column;
+}
 
+.baseComponents {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+}
+
+.buttonsSaveLoad {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
