--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ConponentsStructure/BaseComponents/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ConponentsStructure/BaseComponents/styles.module.css
@@ -4,12 +4,7 @@
   flex-basis: 0;
   display: flex;
   flex-direction: column;
-}
-
-.baseComponents {
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
+  height: 48%;
 }
 
 .buttonsSaveLoad {
@@ -17,4 +12,13 @@
   justify-content: space-between;
   padding-left: 1rem;
   padding-right: 1rem;
+  height: 15%;
+}
+
+.baseComponents {
+  display: flex;
+  flex-direction: column;
+  flex: content;
+  overflow-y: auto;
+  height: 85%;
 }
