--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ConponentsStructure/ComponentItems/ComponentCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ConponentsStructure/ComponentItems/ComponentCard/styles.module.css
@@ -1,3 +1,7 @@
 .componentCard {
   flex-shrink: 1;
+  padding: 0.2rem;
+  border: 0.2rem solid rgba(0, 65, 102, 0.2);
+  border-radius: 0.5rem;
+  margin: 0.2rem;
 }
