--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.container {
+  width: 100%;
+}
+
 .container-row {
   display: flex;
 }
