--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/PlaceholderFormElement/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/PlaceholderFormElement/styles.module.css
@@ -1,7 +1,9 @@
 .container {
     display: flex;
+    height: 100%;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .primaryText {
