--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -12,3 +12,11 @@
   margin: 0.4rem;
   height: 4%;
 }
+
+.openAndCloseBatton{
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
+}
