--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -22,3 +22,10 @@
   flex-direction: row;
   justify-content: space-between;
 }
+.openAndCloseBatton{
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
+}
