--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -13,10 +13,17 @@
   height: 4%;
 }
 
-.openAndCloseBatton{
+.toggleButton {
+  position: absolute; 
+  left: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+  opacity: 0;
   display: flex;
   align-items: center;
   padding: 0px;
   margin: 0px;
   height: 100%;
+}
+.toggleButton:hover {
+  opacity: 1;
 }
