Пофиксил имя компоненты и исправил плохой код

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/FormTwoColumns/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/FormTwoColumns/styles.module.css
@@ -9,7 +9,7 @@
 .flexChild {
   text-align: center;
   padding: 20px;
-  padding-top: 0px;
+  padding-top: 10px;
   box-sizing: border-box;
   width: 50%;
   white-space: nowrap;
@@ -19,6 +19,18 @@
 }
 
 .borderBottomForText > :not(:last-child){
+  border-bottom-style: dotted;
+  border-bottom-width: 2px;
+}
+
+.textDecoration {
+  margin-left: 20px;
+  padding-top: 5px;
+  font-size: 12px;
+  font-family: Inter;
+  font-style: normal;
+  line-height: 120%;
+  color: #002033BF;
   border-bottom-style: dotted;
   border-bottom-width: 2px;
 }
