--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/FormWithTwoColumns/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/FormWithTwoColumns/styles.module.css
@@ -53,3 +53,16 @@
   padding-left: 20px; 
   padding-right: 20px; 
 }
+
+.switchDecoration {
+  padding-top: 5px;
+  padding-left: 8px;
+}
+
+.formFullWidth {
+  width: 100%;
+}
+
+.textSwitch {
+display: flex;
+}
