--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
@@ -11,7 +11,7 @@
 }
 
 .selectedElement {
-  box-SHADOW: inset 0 0 0rem 0.2rem rgba(39, 50, 245, 0.8);
+  box-shadow: inset 0 0 0rem 0.2rem rgba(39, 50, 245, 0.8);
   border-radius: 0.5rem;
 }
 
