Переделал левую панель и убрал по середине страниц

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentGroupCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentGroupCard/styles.module.css
@@ -5,3 +5,9 @@
 .componentGroupCardCollapse {
   flex: 1;
 }
+
+.componentGroupCardName{
+  padding-top: 12px;
+  padding-left: 12px;
+  font-size: 10px; 
+}
