--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
@@ -4,7 +4,7 @@
   flex-basis: 0;
   display: flex;
   flex-direction: column;
-  height: 48%;
+  height: 96%;
 }
 
 .buttonsSaveLoad {
@@ -21,4 +21,13 @@
   flex: content;
   overflow-y: auto;
   height: 85%;
+}
+
+.Blocks{
+  overflow-x: hidden;
+}
+
+.tabs{
+  font-size: 12px;
+  padding: 12px
 }
