--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentBlockItems/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentBlockItems/styles.module.css
@@ -17,9 +17,10 @@
   height: 21px;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
+  display: inline-block;
  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
+  white-space: nowrap;
 }
 
 .baseComponents {
