fix: :bug: Переделал блоки консты и подправил верстку сайд бара

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/ComponentCardLayout/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/ComponentCardLayout/styles.module.css
@@ -1,3 +1,12 @@
 .cardLayout {
   display: flex;
+  align-items: center;
+}
+
+.cardIconQuest{
+  margin-inline-start: auto
+}
+
+.cardIconDraggable{
+  margin-right: 10px;
 }
