--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentBlockItems/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentBlockItems/styles.module.css
@@ -1,6 +1,6 @@
 .imgBlock{
-  height: 40px;
-  width: 90%;
+  height: 7vh;
+  width: 100%;
 }
   
 .itemBlocks{
@@ -10,6 +10,8 @@
   align-items: flex-start;
   padding: 4px;
   gap: 4px;
+  border: 1px solid rgba(0, 32, 51, 0.08);
+  border-radius: 4px;
 }
 
 .textBlock {
@@ -24,27 +26,27 @@
 }
 
 .baseComponents {
-    display: flex;
-    flex-direction: column;
-    flex: content;
-    overflow-y: auto;
-    height: 85%;
-  }
+  display: flex;
+  flex-direction: column;
+  flex: content;
+  overflow-y: auto;
+  height: 85%;
+}
   
-  .componentCardItemBlock{
-    display: flex ;
-    flex-direction: row ;
-    align-items: flex-start ;
-    padding: 10px ;
-    padding-top: 0ppx ;
-    padding-bottom: 0px ;
-    padding-left: 12px ;
-    gap: 18px ;
-  }
+.componentCardItemBlock{
+  display: flex ;
+  flex-direction: row ;
+  align-items: flex-start ;
+  padding: 10px ;
+  padding-top: 0ppx ;
+  padding-bottom: 0px ;
+  padding-left: 12px ;
+  gap: 18px ;
+}
   
-  .componentCardItem{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-  }
+.componentCardItem{
+ display: flex;
+ flex-direction: column;
+ align-items: flex-start;
+ gap: 8px;
+}
