refactor: :art: Поменял размерность в настройках у элементов

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/ListSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/ListSettings/styles.module.css
@@ -1,3 +1,10 @@
+.listSettings {
+  display: flex;
+  flex-direction: column;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 .Switch {
   margin-top: 10px;
 }
