--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/SelectSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/SelectSettings/styles.module.css
@@ -1,6 +1,7 @@
-.tableSettings {
+.selectSettings {
   display: flex;
   flex-direction: column;
   padding-left: 12px;
   padding-right: 12px;
 }
+  
