--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/CheckboxSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/CheckboxSettings/styles.module.css
@@ -1,4 +1,6 @@
-.badgeSettings {
+.checkBoxSettings {
   display: flex;
   flex-direction: column;
+  padding-left: 12px;
+  padding-right: 12px;
 }
