--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/LayoutFormElement/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Elements/LayoutFormElement/styles.module.css
@@ -1,4 +1,8 @@
 .gridLayout {
-    border: 1px dotted;
-    margin: 0.2rem;
+  border: 1px dotted;
+  margin: 0.2rem;
+}
+
+.borderRadiusEmpty {
+  border-radius: inherit;
 }
