fix: Поменять кнопки на экспорт компоненты

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -37,3 +37,12 @@
 .toggleButton:hover {
   opacity: 1;
 }
+
+.exportText {
+  display: flex;
+}
+
+.exportButton {
+  margin-top: 33px;
+  margin-left: 12px;
+}
