--- a/src/components/FormConstructor/styles.module.css
+++ b/src/components/FormConstructor/styles.module.css
@@ -1,6 +1,10 @@
 .formConstructor {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   height: 100%;
   width: 100%;
+}
+
+.formConstructorMain {
+  height: 0;
 }
