--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,13 @@ code {
   display: flex;
 }
 
+.container-column {
+  display: flex;
+  flex-direction: column;
+}
+.align-center {
+  align-items: center;
+}
 .flex-grow-1 {
   flex-grow: 1;
 }
