fix: Поправить код

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -17,6 +17,12 @@
   flex-direction: column;
 }
 
+.elementSettingsNotFound {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+
 .buttonsSaveLoad {
   display: flex;
   flex-direction: row;
