--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/ButtonSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/ButtonSettings/styles.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-2xs);
-  width: 50%;
+  flex: 1;
 }
 
 .blockIcon {
@@ -30,4 +30,8 @@
 
 .modalPadding {
   padding-top: var(--space-s);
+}
+
+.sizeFlex {
+  flex: 1;
 }
