--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/InformerSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/InformerSettings/styles.module.css
@@ -1,4 +1,22 @@
 .informerSettings {
   display: flex;
   flex-direction: column;
+  gap: var(--space-s);
+}
+
+.rowSettings {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-s);
+}
+
+.columnSettings {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-2xs);
+  flex: 1;
+}
+
+.selfFlex {
+  align-self: flex-end;
 }
