--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/InformerSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/InformerSettings/styles.module.css
@@ -15,8 +15,9 @@
   flex-direction: column;
   gap: var(--space-2xs);
   flex: 1;
+  align-self: flex-end;
 }
 
-.selfFlex {
-  align-self: flex-end;
+.widthFlex {
+  flex: 1;
 }
