fix: Обновить стиль настроек у badge

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/BadgeSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/BadgeSettings/styles.module.css
@@ -1,4 +1,28 @@
 .badgeSettings {
   display: flex;
   flex-direction: column;
+  gap: var(--space-s);
+}
+
+.rowSettings {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-s);
+}
+
+.columnSettings {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-2xs);
+  flex: 1;
+  align-self: flex-end;
+}
+
+.widthFlex {
+  flex: 1;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
 }
