--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/TextSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/TextSettings/styles.module.css
@@ -1,4 +1,27 @@
 .textSettings {
   display: flex;
   flex-direction: column;
+  gap: var(--space-s);
+}
+
+.rowSettings {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-s);
+}
+
+.columnSettings {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-xs);
+  flex: 1;
+  align-self: flex-end;
+}
+
+.widthFlex {
+  flex: 1;
+}
+
+.paddingCollapse {
+  padding-top: var(--space-s);
 }
