--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/CheckboxSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/CheckboxSettings/styles.module.css
@@ -1,4 +1,30 @@
-.badgeSettings {
+.checkboxSettings {
   display: flex;
   flex-direction: column;
+  gap: var(--space-s);
+}
+
+.rowSettings {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-s);
+}
+
+.columnInRowSettings {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-xs);
+  flex: 1;
+  align-self: flex-end;
+}
+
+.columnSettings {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-xs);
+  flex: 1;
+}
+
+.widthFlex {
+  flex: 1;
 }
