refactor: Обновить дизайн сетки

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/ComponentCardLayout/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/ComponentCardLayout/styles.module.css
@@ -1,3 +1,41 @@
 .cardLayout {
   display: flex;
+  border: var(--space-3xs) solid #00416633;
+  border-radius: var(--space-2xs);
+}
+
+.borderOut {
+  border: var(--space-3xs) dashed #00416633;
+  width: var(--space-3xl);
+  height: var(--space-5xl);
+  margin: var(--space-2xs);
+}
+
+.borderIn {
+  border: var(--space-3xs) dashed #00416633;
+  width: var(--space-6xl);
+  height: var(--space-5xl);
+  margin: var(--space-2xs);
+}
+
+.borderInIn {
+  border: var(--space-3xs) dashed #00416633;
+  width: var(--space-5xl);
+  height: var(--space-4xl);
+  margin: var(--space-s);
+}
+
+.marginText {
+  margin-left: var(--space-2xs);
+}
+
+.layerOut {
+  display: flex;
+  flex-direction: column;
+  padding: var(--space-2xs);
+}
+
+.borderFlex {
+  display: flex;
+  flex-direction: row;
 }
