--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/styles.module.css
@@ -1,7 +1,9 @@
 .componentCard {
-  flex-shrink: 1;
-  padding: 0.2rem;
-  border: 0.2rem solid rgba(0, 65, 102, 0.2);
+  flex: 1;
   border-radius: 0.5rem;
-  margin: 0.2rem;
+  border: 2px solid #00416633;
+}
+
+.paddingText {
+  padding-left: var(--space-2xs);
 }
