--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
@@ -3,7 +3,15 @@
   flex-shrink: 1;
   flex-basis: 0;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   overflow-y: auto;
+  padding: var(--space-xs);
+  gap: var(--space-s);
+}
+
+@media screen and (max-width: 1900px) {
+  .componentItems {
+    grid-template-columns: 1fr 1fr;
+  }
 }
