--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/LayoutSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/LayoutSettings/styles.module.css
@@ -1,4 +1,47 @@
 .layoutSettings {
   display: flex;
   flex-direction: column;
+  gap: var(--space-s);
+}
+
+.rowSettings {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-s);
+}
+
+.columnSettings {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-2xs);
+  flex: 1;
+  align-self: flex-end;
+}
+
+.widthFlex {
+  flex: 1;
+}
+
+.columnSettingsWithoutRow {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-s);
+  flex: 1;
+}
+
+.select {
+  display: flex;
+  gap: var(--space-s);
+  padding-left: var(--space-s);
+}
+
+.selectElement {
+  display: flex;
+  align-items: center;
+  gap: var(--space-s);
+  padding-left: var(--space-s);
+}
+
+.paddingHidden {
+  padding-left: var(--space-xs);
 }
