--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
@@ -1,3 +1,20 @@
 .componentCard {
+  border-radius: 0.5rem;
+  border: 2px solid #00416633;
+}
+
+.imgBox {
   display: flex;
+  width: 96px;
+  height: 70px;
+}
+
+.img {
+  flex: 1;
+  align-items: center;
+  align-self: center;
+}
+
+.text {
+  padding-left: var(--space-2xs);
 }
