--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 10px;
 }
 
 body {
@@ -28,9 +29,11 @@ code {
   display: flex;
   flex-direction: column;
 }
+
 .align-center {
   align-items: center;
 }
+
 .flex-grow-1 {
   flex-grow: 1;
 }
@@ -44,7 +47,6 @@ code {
 }
 
 .borderCard {
-  padding: 0.05rem;
   border: 0.2rem solid rgba(0, 65, 102, 0.2);
   border-radius: 0.5rem;
   margin: 0.2rem;
