Убрать бордеры лишние.

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -7,11 +7,18 @@
   overflow-y: hidden;
   min-width: 35rem;
   max-width: 35rem;
+
+  border-right: 1px solid var(--color-typo-system)
 }
 
 .tabs {
-  margin: 0.4rem;
-  height: 4%;
+  height: 3.2rem;
+  display: flex;
+  border-bottom: 1px solid var(--color-typo-system)
+}
+
+.tabs_margin {
+  margin-left: 1rem;
 }
 
 .toggleButton {
