--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -2,15 +2,17 @@
   flex-grow: 0.5;
   flex-shrink: 1;
   flex-basis: 0;
-
   display: flex;
   flex-direction: column;
+
 }
 
 .settingsContainer {
   padding: 0.5rem;
   min-width: 35rem;
   max-width: 35rem;
+
+  border-left: 1px solid var(--color-typo-system)
 }
 
 .elementSettings {
