--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -11,6 +11,10 @@
   border-right: 1px solid var(--color-typo-system)
 }
 
+.tabs :global(.MixFocus_before:focus::before) {
+  box-shadow: none;
+}
+
 .tabs {
   height: 3.2rem;
   display: flex;
