--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
@@ -7,7 +7,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   overflow-y: auto;
   padding: var(--space-xs);
-  gap: var(--space-s);
+  gap: var(--space-xs);
 }
 
 @media screen and (max-width: 1900px) {
