--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -4,15 +4,14 @@
   flex-basis: 0;
   display: flex;
   flex-direction: column;
-
 }
 
 .settingsContainer {
   padding: 0.5rem;
-  min-width: 35rem;
-  max-width: 35rem;
+  min-width: 36rem;
+  max-width: 36rem;
 
-  border-left: 1px solid var(--color-typo-system)
+  border-left: 1px solid var(--color-typo-system);
 }
 
 .elementSettings {
