--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/UserSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/UserSettings/styles.module.css
@@ -1,15 +1,15 @@
-.userSettings {
+.settingsBlockUser {
   display: flex;
   flex-direction: column;
   gap: var(--space-s);
 }
 
-.rowSettings {
+.settingsBlockRow {
   display: flex;
   flex-direction: row;
   gap: var(--space-s);
 }
 
-.widthFlex {
+.elementWidth {
   flex: 1;
 }
