--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentTree/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentTree/styles.module.css
@@ -4,5 +4,5 @@
   flex-basis: 0;
   overflow-y: auto;
   margin: 0.2rem;
-  border-top: 1px solid var(--color-typo-system)
+  border-top: 1px solid var(--color-typo-system);
 }
