--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -4,7 +4,6 @@
   flex-basis: 0;
   display: flex;
   flex-direction: column;
-
 }
 
 .settingsContainer {
@@ -12,7 +11,7 @@
   min-width: 35rem;
   max-width: 35rem;
 
-  border-left: 1px solid var(--color-typo-system)
+  border-left: 1px solid var(--color-typo-system);
 }
 
 .elementSettings {
