--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/DroppableLocalLayer/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/DroppableLocalLayer/styles.module.css
@@ -1,11 +1,20 @@
 .stylesColumn {
-    padding-top: 1.2rem;
+    height: 2.4rem;
     background-color: aquamarine;
 }
 
 .stylesRow {
-    padding-right: 1.2rem;
+    width: 2.4rem;
     background-color: aquamarine;
+}
+
+.droppableLocalLayerLayoutElement {
+    display: inherit;
+    flex: inherit;
+    flex-direction: inherit;
+    border: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .droppableLocalLayerFormElement {
@@ -13,11 +22,4 @@
     height: fit-content;
     display: flex;
     flex-direction: inherit;
-}
-
-.droppableLocalLayerLayoutElement {
-    all: inherit;
-    border: 0;
-    padding: 0;
-    margin: 0;
 }
