--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/BaseSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/BaseSettings/styles.module.css
@@ -1,8 +1,5 @@
-.marginAndPadding {
+.baseSettingsContainer {
   display: flex;
-  flex-direction: row;
-  padding-left: var(--space-s);
-  padding-right: var(--space-s);
 }
 
 .arrowAndText {
