--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/SelectableLayer/styles.module.css
@@ -26,3 +26,7 @@
 .fitSpace {
   flex-grow: 1;
 }
+.focused:hover:not(:has(.focused:hover)){
+  outline: 1px dashed #41a3ff;
+  outline-offset: -2px;
+}
