Переделан Switch, убран паддинг

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/FormBlock/Pages/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/FormBlock/Pages/styles.module.css
@@ -1,6 +1,7 @@
 .pagesBlock {
-  overflow: auto;
   height: 33px;
+  padding: var(--space-xs);
+  overflow: hidden;
 
   border-bottom: 1px solid var(--color-typo-system);
 }
