Убран скролл вгоризонтальный

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   overflow-y: auto;
+  overflow-x: hidden;
   padding: var(--space-xs);
   gap: var(--space-s);
 }
