--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -43,8 +43,19 @@
 .toggleButton:hover {
   opacity: 1;
 }
+.settingsTitle {
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--color-bg-system);
+  padding-bottom: var(--space-xs);
 
+}
 .exportText {
+
+  border-top: 1px solid var(--color-bg-system);
+
+  padding-top: var(--space-xs);
   display: flex;
   align-items: flex-end;
 }
