--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/CardSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/CardSettings/styles.module.css
@@ -7,7 +7,8 @@
 .rowSettings {
   display: flex;
   flex-direction: row;
-  gap: var(--space-s);
+  align-items: center;
+  gap: var(--space-xs);
 }
 
 .columnSettings {
