--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -7,7 +7,8 @@
 }
 
 .settingsContainer {
-  padding: var(--space-s);
+  padding-left: var(--space-xs);
+  padding-bottom: var(--space-xs);
   padding-top: 0;
   min-width: 240px;
   max-width: 240px;
@@ -21,6 +22,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  padding-right: var(--space-xs);
 }
 
 .buttonsSaveLoad {
