--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -54,17 +54,15 @@
   border-bottom: 1px solid var(--color-bg-system);
   padding-bottom: var(--space-xs);
   padding-top: var(--space-xs);
+  padding-right: var(--space-xs);
 
 }
 .exportText {
-
-  border-top: 1px solid var(--color-bg-system);
-
   padding-top: var(--space-xs);
   display: flex;
   align-items: flex-end;
 }
 
 .exportButton {
-  margin-left: var(--space-xs);
+  margin-top: var(--space-xs);
 }
