--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/BreadcrumbsSettings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/BreadcrumbsSettings/styles.module.css
@@ -6,7 +6,7 @@
 
 .rowSettings {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: var(--space-s);
 }
 
@@ -41,4 +41,8 @@
   display: flex;
   align-items: center;
   gap: var(--space-s);
+}
+
+.selectRenderValue {
+  display: flex;
 }
