--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Settings/styles.module.css
@@ -4,6 +4,7 @@
   flex-basis: 0;
   display: flex;
   flex-direction: column;
+  background-color: var(--color-bg-secondary);
 }
 
 .settingsContainer {
@@ -58,7 +59,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid var(--color-bg-system);
   padding-bottom: var(--space-xs);
   padding-top: var(--space-xs);
   padding-right: var(--space-xs);
